syntax = "proto3";

option go_package = "./pb";

package pb;

message RegisterCode {
  enum Code {
    Ok = 0; // 注册成功
    Failed = 1; // 注册失败
    AccountExists = 2; // 账号已存在
  }
}

message LoginCode {
  enum Code {
    Ok = 0; // 登录成功
    Failed = 1; // 登录失败
    IncorrectAccountOrPassword = 2; // 账号或密码错误
  }
}

// 注册请求
message RegisterReq {
  string Account = 1; // 账号
  string Password = 2; // 密码
  string Nickname = 3; // 昵称
  int32 Age = 4; // 年龄
}

// 注册响应
message RegisterRes {
  RegisterCode.Code Code = 1; // 返回码
  int32 ID = 2; // 用户ID
  string Account = 3; // 账号
}

// 登录请求
message LoginReq {
  string Account = 1; // 账号
  string Password = 2; // 密码
}

// 登录响应
message LoginRes {
  LoginCode.Code Code = 1; // 返回码
  int32 ID = 2; // 用户ID
  string Account = 3; // 账号
}

